# rico_sim_2

./: README.md
pal_gazebo_worlds/launch/: pal_gazebo.launch.py
pal_gazebo_worlds/worlds/: W_1.world
pal_navigation_cfg_public/pal_navigation_cfg_bringup/launch/: nav_bringup.launch.py
tiago_navigation/tiago_2dnav/config/rviz/: navigation.rviz
tiago_robot/tiago_bringup/config/motions/: tiago_motions.yaml.em
tiago_robot/tiago_bringup/launch/: tiago_bringup.launch.py  tiago_play_motion2.launch.py
tiago_simulation_bringup/: CMakeLists.txt  package.xml
tiago_simulation_bringup/config/: global_config.yaml
tiago_simulation_bringup/launch/: system_bringup.launch.py
tiago_simulation_bringup/rviz/: rviz_tiago_basic.rviz
